<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="restart">Play Again</string>
    <string name="android">Android</string>
    <string name="player1">Player1</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="tie">it\'s a tie match !!!</string>
    <string name="has_won">has won !!!</string>
    <string name="start">start</string>
    <string name="rate_it">Rate it !</string>
    <!--<dimen name="text_size">55sp</dimen>-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player2">Player2</string>
    <string name="title">Tic Tac Toe</string>
    <string name="homeFragment">homeFragment</string>
    <string name="string0">O</string>
    <string name="stringX">X</string>
    <string name="play_with">Play with :</string>
    <string name="choose_game">Choose game :</string>
    <string name="_3_3">3*3</string>
    <string name="_4_4">4*4</string>
    <string name="_6_6">6*6</string>
    <string name="options">options</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="start_game">Start Game</string>
    <string name="names">Names</string>
    <string name="you">You</string>
    <string name="friend">Friend</string>
    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="done">done</string>
</resources>
