<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/g4"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:text="@string/names"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player1"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etxt_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/you"
                android:minWidth="120dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player2"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/etxt_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:hint="@string/friend"
                android:minWidth="120dp"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sound_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio_group_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbn_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/on"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <RadioButton
                    android:id="@+id/rbn_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/off"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />
            </RadioGroup>

        </LinearLayout>


        <android.support.v7.widget.CardView
            android:id="@+id/card_v_btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp">

            <Button
                android:id="@+id/btn_done"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/done"
                android:textSize="18sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v7.widget.CardView>