<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g4">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="-10dp"
        android:layout_gravity="center"
        android:src="@drawable/trp"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play with :"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/rb_android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/android"
                android:textSize="25sp" />

            <RadioButton
                android:id="@+id/rb_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/friend"
                android:textSize="25sp" />
        </RadioGroup>

        <android.support.v7.widget.CardView
            android:id="@+id/card_v_btn_srt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/start"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_v_btn_ops"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btn_ops"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="options"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_v_btn_rate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btn_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:padding="5dp"
                android:text="@string/rate_it"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</LinearLayout>