<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g4">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"

        android:layout_centerHorizontal="true"
        android:src="@drawable/ttt5"
        android:padding="10dp" />
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@+id/grid_container"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:text="@string/tic_tac_toe"-->
        <!--android:textColor="@android:color/white"-->
        <!--android:textSize="30sp" />-->

    <LinearLayout
        android:id="@+id/grid_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_v1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_v4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_v7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_v9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/text9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_size" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/grid_container"
        android:layout_alignLeft="@+id/grid_container"
        android:layout_alignStart="@+id/grid_container"
        android:layout_alignRight="@+id/grid_container"
        android:layout_alignEnd="@+id/grid_container">

        <LinearLayout
            android:id="@+id/pl_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_vp1"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/black"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/pl1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/player1"
                    android:layout_gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_vp2"
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardBackgroundColor="@android:color/black"
                app:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/pl2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/android"
                    android:textColor="@android:color/white"
                    android:textSize="25sp" />
            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/card_vw2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="40dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/pl_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_v_btn"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:text="@string/restart"
                android:textColor="@android:color/black"
                android:textSize="18sp"

                />
        </android.support.v7.widget.CardView>
    </FrameLayout>

</RelativeLayout>
